--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-/* ===== General Styles ===== */
+.page {
+    display: none; 
+}
+
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f7f3f7;
